# safe_package_manager

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build-and-test.yml
src/application/: admin_app.cpp  application.cpp  client_app.cpp  server_app.cpp
src/controler/: controler.cpp  controler.h  strategy.cpp  strategy.h
src/map/: map.h
src/network/: client.h  handle_strategy.cpp  handle_strategy.h  network_controler.h  server.h
src/package/: empty_package.cpp  empty_package.h  main_package.cpp  main_package.h  package.cpp  package.h  support_package.cpp  support_package.h
src/package_manager/: package_manager.cpp  package_manager.h
src/sockets/: client.h  server.h
src/view/: view.h
tests/: main_test.cpp  main_test_old.cpp  map_tests.cpp  timing.cpp
